Update startup scripts for Solr 4 to set garbage collection options